did some more routing and more queries; moved data classes to seperate files; included ktor locations to test @Location functionality; updated swagger.yaml
