# Swagger/swagger.yaml
@@ -65,11 +65,6 @@ paths:
       tags:
         - "Users"
       summary: "Get a list of users"
-      parameters:
-        - name: "userId"
-          in: "query"
-          type: "integer"
-          description: "Only the selected users"
       responses:
         "200":
           description: "Users aquired"
@@ -90,7 +85,7 @@ paths:
           schema:
             type: "object"
             properties: 
-              userName:
+              name:
                 type: "string"
 
       responses:
@@ -105,6 +100,19 @@ paths:
         "409":
           description: "Conflict; name already exists"
 
+  /users/{id}:
+    get:
+        tags:
+          - "Users"
+        summary: "Get a specific user"
+        responses:
+          "200":
+            description: "User aquired"
+            schema:
+              items: 
+                $ref: "#/definitions/User"
+          "400":
+            description: "Bad request"
 
   /competitions:
     get:
@@ -152,7 +160,7 @@ paths:
         "400":
           description: "Bad request"
 
-  /competitions/{competitionId}:
+  /competitions/{id}:
     get:
         tags:
           - "Competitions"
